fix: welcome screen z-index, crosscheck env's, fixing text display bug in dark mode while typing

--- a/apps/collabydraw/app/globals.css
+++ b/apps/collabydraw/app/globals.css
@@ -736,6 +736,10 @@ button {
   z-index: 2;
 }
 
+.dark .collabydraw-textEditorContainer textarea{
+  filter: var(--theme-filter);
+}
+
 .canvas-bg-color-item {
   filter: var(--theme-filter);
 }
